style.css
* {
    margin: 0;
    padding: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: rgb(243, 243, 243);
}

body {
    background-color: #16191D;
}

#body {
    max-width: 650px;
    margin: 40px auto;
    padding: 0 10px;
    font-family: 18px/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: #444;
}

header {
    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('imgs/bg-iss013e78960.jpg');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    height: 100vh;
}

h1 {
    color: #f5f5f5;
    text-align: center;
    vertical-align: text-top;
    padding: 15px;
    /* line-height: 1px; */
    font-size: 3em;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 200px;
    size: 100%;
}

#p_0subtitle {
    display: flex;
    justify-content: center;
    align-items: top;
    margin-top: 5px;
    /* background-color: #0005; */
    font-size: 1rem;
}

#d_0nav {
    width: 100%;
    height: 10vh;
}


/* #d_1sub {
    display: flex;
    justify-content: center;
    align-items: top;
    margin-top: 5px;
    background-color: #0005;
    width: fit-content;
    height: fit-content;
} */

nav {
    width: 100%;
    height: 50px;
    background-color: #0005;
    line-height: 50px;
}

nav ul {
    float: right;
    margin-right: 15px;
}

nav ul li {
    list-style-type: none;
    display: inline-block;
    transition: 0.7s all;
}

nav ul li:hover {
    background-color: #0c1a31;
}

nav ul li a {
    text-decoration: none;
    color: #fff;
    padding: 30px;
}

